# matplc-modern

./: .gitignore  Makefile  Makefile.Linux  Makefile.QNX  README  README.md  TROUBLESHOOTING
comm/network_io/: Makefile  README  TODO  ed_this  network_io.cpp  network_io.h
comm/rs232c_lib/: Makefile  README  ed_this  kbd.c  rs232c.cpp  rs232c_io.cpp  rs232c_io.h
comm/tcpip_lib/: Makefile  README  ed_this  tcpip.cpp
demo/basic/: Makefile  Makefile.depend  README  chaser.c  demo  kbd.c  matplc.conf  vitrine.conf  vitrine.txt
demo/basic_cif/: Makefile  README  demo  matplc.conf  vitrine.txt
demo/basic_comedi/: Makefile  demo  hmi_gtk.glade  matplc.conf
demo/basic_dsp/: Makefile  Makefile.depend  README  demo  kbd.c  matplc.conf  vitrine.conf  vitrine.txt
demo/basic_dsp_gtk/: Makefile  README  demo  hmi_gtk.glade  matplc.conf
demo/basic_dsp_gtk2/: Makefile  README  hmi_gtk2.glade  matplc.conf
demo/basic_gtk/: Makefile  README  hmi_gtk.glade  matplc.conf  off.xpm
demo/basic_gtk2/: Makefile  README  (+4 more)
doc/: LPLC description.txt  License  Maintainers  MatPLC_description.txt  PID_Spec_for_LPlc.txt  acknowledgements.html  contact.html  cvs.html  faq.html  index.html  lplc-article.txt  providers.html  releases.html  structure.txt  whymove.html
drivers/: cif.note
hardware/: README
io/: README
lib/: Makefile  Makefile.depend  README  TODO  plc-cc  plc-cc.cc  plc.c  plc.symbols  plc_private.h  plc_setup.c  plc_setup.h
tools/config/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  conf_utils.c  conf_utils.h  interface.c  interface.h  main.c
(+751 files in other folders)
